# dbs26

./: .gitignore  CLAUDE.md  Makefile  README.md  aarch64-wine-msvc.ini  aarch64.ini  arm64.ini  arm64_x64.ini  cross-aarch64.ini  cross-macos.ini  cross-x86_64.ini  find_msvc.sh  lipo.ini  llvm.ini  macos.ini  meson.build  meson.options  msvc-wine.ini  msvc-wine64.ini  msvc.ini  native-aarch64.ini  native-macos.ini  native-x86_64.ini  windows-aarch64-cl.ini  windows-x86_64-clang.ini  windows.ini  wine-msvc.ini  wine.ini  wine64.ini  x64.ini  x64_arm64.ini  x86_64-wine-msvc.ini  x86_64.ini
.github/workflows/: c-cpp.yml  functions.bash
doc/: Doxyfile  Doxyfile-html  Doxyfile-latex  Doxyfile-man  Doxyfile-rtf  Doxyfile-xml  Makefile
mk/: common.mk  o.mk
scripts/: clang-warnings.sh  lib.sh  warnings.sh
src/: Makefile  args.c  args.h  bits.h  buf64.h  compat.h  compiler.h  dbs26.c  nproc.c  nproc.h  pragma.h  solver.c  solver.h  task.c  task.h  timer.c  timer.h  worker.c  worker.h
